# CPP4-3DViewer2.0

./: README.md
src/: Doxyfile  Makefile  mainpage.dox
src/3DViewer/: CMakeLists.txt  main.cpp  main.qml  settings.json
src/3DViewer/adapter/: fasade.cpp  fasade.h  geometryadditions.cpp  geometryadditions.h  geometryprototype.cpp  geometryprototype.h  linesgeometry.cpp  linesgeometry.h  modelloader.h  saver.cpp  saver.h  viewersettings.h
src/3DViewer/core/: model3d.h
src/3DViewer/io/: objloader.h
src/3DViewer/shaders/: dashed_shader.frag  vertex_shader.frag
src/tests/: test.cpp  test.h
src/tests/lib_build/: CMakeLists.txt
src/tests/test_build/: CMakeLists.txt
